--- a/src/AppBundle/Resources/views/Gallery/index.html.twig
+++ b/src/AppBundle/Resources/views/Gallery/index.html.twig
@@ -44,7 +44,8 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#lightgallery").lightGallery({
-                'thumbnail' : false
+                'thumbnail' : false,
+                'selector' : 'a'
             });
         });
     </script>
